--- a/views/blog/home.html
+++ b/views/blog/home.html
@@ -45,7 +45,7 @@
                         <div class="clear"></div>
                         <div class="article-footer">
                             <span><i class="fa fa-clock-o"></i>&nbsp;&nbsp; {{date .Updated "Y-m-d"}}</span>
-                            <span class="article-author"><i class="fa fa-user"></i>&nbsp;&nbsp;Echosong</span>
+                            <span class="article-author"><i class="fa fa-user"></i>&nbsp;&nbsp;shus521</span>
                             <span><i class="fa fa-tag"></i>&nbsp;&nbsp;<a href="#">{{.Tags}}</a></span>
                             <span class="article-viewinfo"><i class="fa fa-eye"></i>&nbsp;{{.Views}}</span>
                             <span class="article-viewinfo"><i class="fa fa-commenting"></i>&nbsp;0</span>
@@ -61,7 +61,7 @@
                 <div class="blog-main-right">
                     <div class="blogerinfo shadow">
                         <div class="blogerinfo-figure">
-                            <img src="/static/images/es.png" alt="Echosong" style="width: 100px; height: 100px; border-color: papayawhip; border: 1px solid;"/>
+                            <img src="/static/images/es.png" alt="shus521" style="width: 100px; height: 100px; border-color: papayawhip; border: 1px solid;"/>
                         </div>
                         <p class="blogerinfo-nickname">Echsong</p>
                         <p class="blogerinfo-introduce">太阳底下没有新鲜事</p>
@@ -71,7 +71,7 @@
                             <a target="_blank" title="QQ交流" href="javascript:layer.msg('启动QQ会话窗口')"><i class="fa fa-qq fa-2x"></i></a>
                             <a target="_blank" title="给我写信" href="javascript:layer.msg('启动邮我窗口')"><i class="fa fa-envelope fa-2x"></i></a>
                             <a target="_blank" title="新浪微博" href="javascript:layer.msg('转到你的微博主页')"><i class="fa fa-weibo fa-2x"></i></a>
-                            <a target="_blank" title="码云" href="https://github.com/Echosong/ES/"><i class="fa fa-git fa-2x"></i></a>
+                            <a target="_blank" title="码云" href="https://github.com/shus521/ES/"><i class="fa fa-git fa-2x"></i></a>
                         </div>
                     </div>
                     <div></div><!--占位-->
@@ -97,7 +97,7 @@
                         <div class="blog-module-title">友情链接</div>
                         <ul class="blogroll">
                             <li><a target="_blank" href="http://www.layui.com/" title="Layui">Layui</a></li>
-                            <li><a target="_blank" href="https://github.com/Echosong/ES/" title="页签">github</a></li>
+                            <li><a target="_blank" href="https://github.com/shus521/ES/" title="页签">github</a></li>
                         </ul>
                     </div>
                 </div>
