--- a/views/blog/resource.html
+++ b/views/blog/resource.html
@@ -23,7 +23,7 @@
                             <p class="resource-abstract">{{.Title}}！</p>
                             <div class="resource-info">
                                 <span class="category"><a href="#"><i class="fa fa-tags fa-fw"></i>&nbsp;源码</a></span>
-                                <span class="author"><i class="fa fa-user fa-fw"></i>Echosong</span>
+                                <span class="author"><i class="fa fa-user fa-fw"></i>shus521</span>
                                 <div class="clear"></div>
                             </div>
                             <div class="resource-footer">
